# PHP_Chat_Server

classes/: Data.php  Logging.php  ResponceStatus.php  SSL.php  Type.php
client/: CMakeLists.txt  client.cpp  client.php  main.cpp  priv.txt  project  pub.txt
client/Handlers/: Handshake.cpp  Handshake.h  Types.h
client/New_Parser/: main.cpp
client/New_Parser/header/: Json.h
client/New_Parser/src/: Json.cpp  node.cpp
client/adapter/: CMakeLists.txt  adapter.cpp  decode.php  main.cpp
client/adapter/header/: File.h  Pipe.h  Query.h  Ssl.h
client/adapter/src/: File.cpp  Pipe.cpp  Query.cpp  Ssl.cpp
client/header/: Client.h  Connection.h  Data.h  Decoder.h  Encoder.h  Json.h
client/interface/: Command.h  ICommand.h  IConnection.h  IData.h  IGetter.h  IHandler.h
client/src/: Client.cpp  Connection.cpp  Data.cpp  Decoder.cpp  Encoder.cpp  Json.cpp
function/: read.php
server/: Connection.php  index.php  log.txt  server.php  serverBD.sqlite
server/handlers/: Autorization.php  GroupList.php  GroupMessage.php  Handler.php  Handshake.php
